Validação de inputs
Validação para que os inputs não sejam enviados em branco

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 						<label for="altura">Altura:</label>
 						<input id="campo-altura" type="text"  placeholder="Digite a altura do seu paciente(apenas números)">
 					</fieldset>
-					<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+					<button onclick="valida()" id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 				</form>
 			</section>
 		</main>
 		<script src="js/percorre.js"></script>
 		<script src="js/paciente.js"></script>
 		<script src="js/calcula-imc.js"></script>
-		<script src="js/mudar-de-cor.js"></script>
 		<script src="js/adiciona.js"></script>
-		<script src="js/imprime-nome.js"></script>	
+		<script src="js/imprime-nome.js"></script>
+		<script src="js/validacao.js"></script>
 	</body>
 </html>
